# RimValiBot

./: .breakpoints  .env  .env.bak  .gitignore  cogs.json  cogs.json.bak  config.json  data.py  data.py.bak  debug.py  gitWikiConfig.json  gitwiki.py  imageData.json  imageModule.py  main.py  main.py.bak  misc_features.py  pyproject.toml  roles.py  selfupdater.py  users.py
.upm/: store.json
gits/721255780187242504/: Avali.md  Home.md
