[tool.poetry]
name = "tragicentireapplicationprogrammer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]


[tool.poetry.dependencies]
PyNaCl = "^1.4.0"
async-timeout = "^3.0.1"
discord = "^1.0.1"
flask = "^1.1.2"
python = "^3.8"
markupsafe="2.0.1"
[tool.poetry.dev-dependencies]
